# rsibreak

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.Summary  Doxyfile  HACKING  Makefile.am  Messages.sh  NEWS  RSIBreak.files  RSIBreak.includes  TODO  config-rsibreak.h.cmake  config.h.cmake  configure.in  configure.in.bot  configure.in.in  kidle.diff  makechangelog  release_rsibreak.rb  rsibreak.kdevelop
doc/: CMakeLists.txt  Makefile.am  index.docbook
icons/: CMakeLists.txt  Makefile.am  rsibreak-svg-all.svgz
plasma/: CMakeLists.txt  Messages.sh  engine.cpp  engine.h  plasma-applet-rsibreak.desktop  plasma-engine-rsibreak.desktop  rsibreak.cpp  rsibreak.h
po/ar/: rsibreak.po
po/be/: rsibreak.po
po/bg/: rsibreak.po
po/bs/: rsibreak.po
po/ca/: rsibreak.po
po/ca/docs/rsibreak/: index.docbook
po/ca@valencia/: rsibreak.po
po/cs/: rsibreak.po
po/da/: rsibreak.po
po/de/: rsibreak.po
po/de/docs/rsibreak/: index.docbook
po/el/: rsibreak.po
po/en_GB/: rsibreak.po
po/eo/: rsibreak.po
po/es/: rsibreak.po
po/es/docs/rsibreak/: index.docbook
po/et/: rsibreak.po
po/eu/: rsibreak.po
po/fi/: rsibreak.po
po/fr/: rsibreak.po
po/ga/: rsibreak.po
po/gl/: rsibreak.po
po/he/: rsibreak.po
po/hi/: rsibreak.po
po/hne/: rsibreak.po
po/hr/: rsibreak.po
po/hu/: rsibreak.po
po/ia/: rsibreak.po
po/id/: rsibreak.po
po/is/: rsibreak.po
po/it/: rsibreak.po
po/it/docs/rsibreak/: index.docbook
po/ja/: rsibreak.po
po/ka/: rsibreak.po
po/km/: rsibreak.po
po/ko/: rsibreak.po
po/lt/: rsibreak.po
po/mai/: rsibreak.po
po/nb/: rsibreak.po
po/nds/: rsibreak.po
po/nl/: rsibreak.po
po/nl/docs/rsibreak/: index.docbook
po/nn/: rsibreak.po
po/oc/: rsibreak.po
po/pl/: rsibreak.po
po/pt/: rsibreak.po
po/pt/docs/rsibreak/: index.docbook
po/pt_BR/: rsibreak.po
po/pt_BR/docs/rsibreak/: index.docbook
po/ro/: rsibreak.po
po/ru/: rsibreak.po
po/ru/docs/rsibreak/: index.docbook
po/sa/: rsibreak.po
po/se/: rsibreak.po
po/sk/: rsibreak.po
po/sl/: rsibreak.po
po/sl/docs/rsibreak/: index.docbook
po/sv/: rsibreak.po
po/sv/docs/rsibreak/: index.docbook
po/ta/: rsibreak.po
po/tg/: rsibreak.po
po/tr/: rsibreak.po
po/tr/docs/rsibreak/: index.docbook
po/ug/: rsibreak.po
po/uk/: rsibreak.po
po/uk/docs/rsibreak/: index.docbook
po/x-test/: rsibreak.po
po/zh_CN/: rsibreak.po
po/zh_CN/docs/rsibreak/: index.docbook
po/zh_TW/: rsibreak.po
src/: CMakeLists.txt  Makefile.am  boxdialog.cpp  boxdialog.h  breakbase.cpp  breakbase.h  breakcontrol.cpp  breakcontrol.h  dcopiface.cpp  dcopiface.h  eventsrc  grayeffect.cpp  grayeffect.h  grayouteffect.cpp  grayouteffect.h  graywidget.cpp  graywidget.h  kpassivepopup.cpp  kpassivepopup.h  main.cpp  mainpage.cpp  mainpage.dox  notificator.cpp  notificator.h  org.kde.rsibreak.appdata.xml  org.kde.rsibreak.desktop  org.rsibreak.rsiwidget.xml  pasivepopup.h  passivepopup.cpp  passivepopup.h  plasmaeffect.cpp  plasmaeffect.h  popupeffect.cpp  popupeffect.h  rsibreak.desktop  rsibreak.lsm  rsibreak.notifyrc  rsibreak_autostart.desktop  rsibreakui.rc  rsidock.cpp  (+49 more)
test/: CMakeLists.txt  rsitimer_test.cpp  rsitimer_test.h  rsitimercounter_test.cpp  rsitimercounter_test.h  test_runner.cpp
